--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,8 @@
             android:layout_marginHorizontal="8dp"
             android:layout_marginVertical="16dp"
             android:layout_marginBottom="16dp"
-            android:padding="16dp"
+            android:background="@drawable/curve_bg_white"
+            android:padding="14dp"
             app:cardCornerRadius="10dp">
 
             <LinearLayout
@@ -61,7 +62,7 @@
                     style="@style/LoginFormEditText"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/login_edit_text_height"
-                    android:background="@drawable/edit_text_background"
+                    android:background="@drawable/curve_bg_feta_green"
                     android:hint=""
                     android:imeOptions="actionNext"
                     android:inputType="text"
@@ -81,7 +82,7 @@
                     style="@style/LoginFormEditText"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/login_edit_text_height"
-                    android:background="@drawable/edit_text_background"
+                    android:background="@drawable/curve_bg_feta_green"
                     android:hint=""
                     android:imeOptions="actionNext"
                     android:inputType="textPassword"
@@ -102,7 +103,7 @@
                     style="@style/LoginFormEditText"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/login_edit_text_height"
-                    android:background="@drawable/edit_text_background"
+                    android:background="@drawable/curve_bg_feta_green"
                     android:hint=""
                     android:imeOptions="actionDone"
                     android:inputType="number"
