--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FFC4EE7B</color>
     <color name="fetaGreen">#EBFBE8</color>
     <color name="bgGray">#FFF2F2F7</color>
+    <color name="justBlack">#FF232323</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
