--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_edit_text_height">44dp</dimen>
+    <dimen name="edit_text_height">43dp</dimen>
     <dimen name="customer_name_edit_text_height">38dp</dimen>
 </resources>
