--- a/app/src/main/res/layout/fragment_invoice.xml
+++ b/app/src/main/res/layout/fragment_invoice.xml
@@ -37,7 +37,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +71,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat_light"
                     android:gravity="center"
-                    android:text="Name"
+                    android:text="@string/name"
                     android:textColor="@color/justBlack"
                     android:textSize="14sp"
                     android:textStyle="bold" />
@@ -81,7 +82,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat_light"
                     android:gravity="center"
-                    android:text="Brand"
+                    android:text="@string/brand"
                     android:textColor="@color/justBlack"
                     android:textSize="14sp"
                     android:textStyle="bold" />
@@ -92,7 +93,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat_light"
                     android:gravity="center"
-                    android:text="Range"
+                    android:text="@string/range"
                     android:textColor="@color/justBlack"
                     android:textSize="14sp"
                     android:textStyle="bold" />
@@ -103,7 +104,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat_light"
                     android:gravity="center"
-                    android:text="Qty"
+                    android:text="@string/qty"
                     android:textColor="@color/justBlack"
                     android:textSize="14sp"
                     android:textStyle="bold" />
@@ -124,9 +125,11 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/btn_invoice_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/login_button_background"
             android:fontFamily="@font/montserrat_semi_bold"
             android:paddingHorizontal="64dp"
