--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,9 @@
         <item name="android:layout_marginTop">2dp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="GodownChipStyle" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="checkedIconEnabled">false</item>
+        <item name="checkedIcon">@null</item>
+    </style>
 </resources>
