--- a/app/src/main/res/drawable/curve_bg_white_drop_shadow.xml
+++ b/app/src/main/res/drawable/curve_bg_white_drop_shadow.xml
@@ -7,10 +7,7 @@
         </shape>
     </item>
 
-    <item
-        android:bottom="2.5dp"
-        android:left="1dp"
-        android:right="1dp">
+    <item android:bottom="2dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
             <corners android:radius="10dp" />
