--- a/app/src/main/res/layout/list_item_godown.xml
+++ b/app/src/main/res/layout/list_item_godown.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tv_godown_name"
     android:layout_width="match_parent"
     android:layout_height="@dimen/edit_text_height"
     android:layout_margin="16dp"
