--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="colorAccent">#FFC4EE7B</color>
     <color name="fetaGreen">#EBFBE8</color>
     <color name="bgGray">#FFF2F2F7</color>
+    <color name="gray">#FF8A898E</color>
     <color name="justBlack">#FF232323</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="divider_color">#CCF3F3F3</color>
 </resources>
