implement stock and godown api
Signed-off-by: Parth Takkar <parthtakkar@gmail.com>

--- a/app/src/main/res/layout/list_item_godown.xml
+++ b/app/src/main/res/layout/list_item_godown.xml
@@ -6,7 +6,11 @@
     android:layout_height="@dimen/edit_text_height"
     android:layout_margin="16dp"
     android:background="@drawable/curve_bg_white_drop_shadow"
+    android:clickable="true"
+    android:elevation="4dp"
+    android:focusable="true"
     android:fontFamily="@font/montserrat_bold"
+    android:foreground="?selectableItemBackground"
     android:gravity="center_vertical"
     android:paddingHorizontal="16dp"
     android:textColor="@color/black"
