--- a/app/src/main/res/layout/item_dialog_input_add_godown.xml
+++ b/app/src/main/res/layout/item_dialog_input_add_godown.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="32dp"
-    android:background="@drawable/curve_bg_white">
+    android:background="@drawable/curve_bg_white"
+    android:elevation="4dp">
 
     <TextView
         android:id="@+id/tv_add_godown_heading"
