--- a/app/src/main/res/layout/list_item_godown_chip.xml
+++ b/app/src/main/res/layout/list_item_godown_chip.xml
@@ -9,7 +9,11 @@
     android:layout_marginHorizontal="4dp"
     android:checkable="true"
     android:checked="false"
+    android:clickable="true"
+    android:elevation="2dp"
+    android:focusable="true"
     android:fontFamily="@font/montserrat"
+    android:foreground="?selectableItemBackground"
     android:textColor="@color/black"
     android:textSize="14sp"
     app:chipBackgroundColor="@color/colorPrimary20"
