--- a/app/src/main/res/layout/list_item_sale.xml
+++ b/app/src/main/res/layout/list_item_sale.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="4dp"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?selectableItemBackground">
 
     <TextView
         android:id="@+id/tv_dot"
