order history and stocks fragments w history added
Signed-off-by: parthtakkar <parthtakkar@gmail.com>

--- a/app/src/main/res/layout/fragment_godown_stock_history.xml
+++ b/app/src/main/res/layout/fragment_godown_stock_history.xml
@@ -27,7 +27,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:fontFamily="@font/montserrat_semi_bold"
                 android:gravity="center"
-                android:text="@string/godown_stock_details"
+                android:text="@string/godown_stock_history"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 tools:ignore="MissingPrefix" />
@@ -65,13 +65,25 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tv_stock_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:fontFamily="@font/montserrat_medium"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="Stock Item Name" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="12dp">
 
                 <TextView
-                    android:id="@+id/tv_code"
+                    android:id="@+id/tv_stock"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -81,52 +93,7 @@
                     android:lines="2"
                     android:maxLines="2"
                     android:padding="2dp"
-                    android:text="@string/code_caps"
-                    android:textColor="@color/black"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/montserrat_medium"
-                    android:gravity="center"
-                    android:lines="2"
-                    android:maxLines="2"
-                    android:padding="2dp"
-                    android:text="@string/name_caps"
-                    android:textColor="@color/black"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_brand"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/montserrat_medium"
-                    android:gravity="center"
-                    android:lines="2"
-                    android:maxLines="2"
-                    android:padding="2dp"
-                    android:text="@string/brand_caps"
-                    android:textColor="@color/black"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_range"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/montserrat_medium"
-                    android:gravity="center"
-                    android:lines="2"
-                    android:maxLines="2"
-                    android:padding="2dp"
-                    android:text="@string/range_caps"
+                    android:text="@string/stock_caps"
                     android:textColor="@color/black"
                     android:textSize="12sp" />
 
@@ -134,7 +101,7 @@
                     android:id="@+id/tv_qty"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.5"
                     android:ellipsize="end"
                     android:fontFamily="@font/montserrat_medium"
                     android:gravity="center"
@@ -145,13 +112,28 @@
                     android:textColor="@color/black"
                     android:textSize="12sp" />
 
+                <TextView
+                    android:id="@+id/tv_user"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:gravity="center"
+                    android:lines="2"
+                    android:maxLines="2"
+                    android:padding="2dp"
+                    android:text="@string/by_caps"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_godown_stock_details"
+                android:id="@+id/rv_godown_stock_history"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/list_item_godown_stock">
+                tools:listitem="@layout/list_item_godown_stock_history">
 
 
             </androidx.recyclerview.widget.RecyclerView>
