--- a/app/src/main/res/drawable/ic_delivery.xml
+++ b/app/src/main/res/drawable/ic_delivery.xml
@@ -1,13 +1,36 @@
-<vector android:height="24dp" android:viewportHeight="792"
-    android:viewportWidth="792" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#9275b5" android:pathData="M91.33,224.46h331a49.88,49.88 0,0 1,31.5 10.79,44.79 44.79,0 0,1 14,19.51 41.58,41.58 0,0 1,2.37 14.29V567.46H191.35a46,46 0,0 1,-19.79 -4.32,49.74 49.74,0 0,1 -24.77,-26.24 45.77,45.77 0,0 1,-3.43 -17.07L142,441.36H91.33V418.48H142V376.82H91.33v-23H142V314.51l-50.66,0.74v-26H142.4L142.27,253H91.33Z"/>
-    <path android:fillColor="#fdc012" android:pathData="M472.49,567.46V311.21a13.89,13.89 0,0 1,0.81 -4.74c1.74,-4.88 6.42,-15.07 15,-15.07H601.69s11.4,1 15,7.78l78.54,101.33a25.76,25.76 0,0 1,5.41 15.8V526.38a25.21,25.21 0,0 1,-2.26 10.51c-3.76,8.22 -12.41,23.25 -27.48,29.31a18.09,18.09 0,0 1,-6.75 1.26Z"/>
-    <path android:fillColor="#445c64" android:pathData="M511,408.28v-81.7a9.37,9.37 0,0 1,0.7 -3.59c1.14,-2.77 3.62,-7.58 6.93,-7.38h78s4.64,0.82 5.73,4.1l56,66.68a11.1,11.1 0,0 1,2.6 7.14v39.29s-1.91,6.27 -5.18,7.36H603.55a5.64,5.64 0,0 1,-4 -1.66l-21.24,-21.42A4.7,4.7 0,0 0,575 415.7l-54.47,-0.06S511,415.37 511,408.28Z"/>
-    <path android:fillColor="#35444c" android:pathData="M295.09,567.46m-63.14,0a63.14,63.14 0,1 1,126.28 0a63.14,63.14 0,1 1,-126.28 0"/>
-    <path android:fillColor="#79909b" android:pathData="M295.09,567.46m-31.57,0a31.57,31.57 0,1 1,63.14 0a31.57,31.57 0,1 1,-63.14 0"/>
-    <path android:fillColor="#35444c" android:pathData="M586.58,569.44m-63.14,0a63.14,63.14 0,1 1,126.28 0a63.14,63.14 0,1 1,-126.28 0"/>
-    <path android:fillColor="#79909b" android:pathData="M586.58,569.44m-31.57,0a31.57,31.57 0,1 1,63.14 0a31.57,31.57 0,1 1,-63.14 0"/>
-    <path android:fillColor="#7c659b" android:pathData="M142.3,259.79h122.47v25.07h-122.47z"/>
-    <path android:fillColor="#7c659b" android:pathData="M142.3,323.36h122.47v25.07h-122.47z"/>
-    <path android:fillColor="#7c659b" android:pathData="M142.3,386.92h122.47v25.07h-122.47z"/>
+<vector android:height="24dp"
+    android:viewportHeight="792"
+    android:viewportWidth="792"
+    android:width="24dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="#9275b5"
+        android:pathData="M91.33,224.46h331a49.88,49.88 0,0 1,31.5 10.79,44.79 44.79,0 0,1 14,19.51 41.58,41.58 0,0 1,2.37 14.29V567.46H191.35a46,46 0,0 1,-19.79 -4.32,49.74 49.74,0 0,1 -24.77,-26.24 45.77,45.77 0,0 1,-3.43 -17.07L142,441.36H91.33V418.48H142V376.82H91.33v-23H142V314.51l-50.66,0.74v-26H142.4L142.27,253H91.33Z" />
+    <path
+        android:fillColor="#fdc012"
+        android:pathData="M472.49,567.46V311.21a13.89,13.89 0,0 1,0.81 -4.74c1.74,-4.88 6.42,-15.07 15,-15.07H601.69s11.4,1 15,7.78l78.54,101.33a25.76,25.76 0,0 1,5.41 15.8V526.38a25.21,25.21 0,0 1,-2.26 10.51c-3.76,8.22 -12.41,23.25 -27.48,29.31a18.09,18.09 0,0 1,-6.75 1.26Z" />
+    <path
+        android:fillColor="#445c64"
+        android:pathData="M511,408.28v-81.7a9.37,9.37 0,0 1,0.7 -3.59c1.14,-2.77 3.62,-7.58 6.93,-7.38h78s4.64,0.82 5.73,4.1l56,66.68a11.1,11.1 0,0 1,2.6 7.14v39.29s-1.91,6.27 -5.18,7.36H603.55a5.64,5.64 0,0 1,-4 -1.66l-21.24,-21.42A4.7,4.7 0,0 0,575 415.7l-54.47,-0.06S511,415.37 511,408.28Z" />
+    <path
+        android:fillColor="#35444c"
+        android:pathData="M295.09,567.46m-63.14,0a63.14,63.14 0,1 1,126.28 0a63.14,63.14 0,1 1,-126.28 0" />
+    <path
+        android:fillColor="#79909b"
+        android:pathData="M295.09,567.46m-31.57,0a31.57,31.57 0,1 1,63.14 0a31.57,31.57 0,1 1,-63.14 0" />
+    <path
+        android:fillColor="#35444c"
+        android:pathData="M586.58,569.44m-63.14,0a63.14,63.14 0,1 1,126.28 0a63.14,63.14 0,1 1,-126.28 0" />
+    <path
+        android:fillColor="#79909b"
+        android:pathData="M586.58,569.44m-31.57,0a31.57,31.57 0,1 1,63.14 0a31.57,31.57 0,1 1,-63.14 0" />
+    <path
+        android:fillColor="#7c659b"
+        android:pathData="M142.3,259.79h122.47v25.07h-122.47z" />
+    <path
+        android:fillColor="#7c659b"
+        android:pathData="M142.3,323.36h122.47v25.07h-122.47z" />
+    <path
+        android:fillColor="#7c659b"
+        android:pathData="M142.3,386.92h122.47v25.07h-122.47z" />
 </vector>
