--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,144 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bgGray"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.LoginActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="60dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:background="@color/bgGray"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context=".ui.login.LoginActivity">
 
-        <TextView
-            android:id="@+id/tv_heading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginVertical="16dp"
-            android:fontFamily="@font/montserrat_semi_bold"
-            android:text="@string/login_heading"
-            android:textColor="@color/black"
-            android:textSize="22sp" />
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/card_view"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/curve_bg_white"
-            android:padding="14dp"
-            app:cardCornerRadius="10dp">
+            android:layout_marginVertical="60dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tv_heading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginVertical="16dp"
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:text="@string/login_heading"
+                android:textColor="@color/black"
+                android:textSize="22sp" />
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginVertical="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/curve_bg_white"
+                android:padding="14dp"
+                app:cardCornerRadius="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="16dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/FormEditTextHeading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="2dp"
+                        android:text="@string/username" />
+
+                    <EditText
+                        android:id="@+id/et_username"
+                        style="@style/FormEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/login_edit_text_height"
+                        android:background="@drawable/curve_bg_feta_green"
+                        android:hint=""
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        style="@style/FormEditTextHeading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginBottom="2dp"
+                        android:text="@string/password" />
+
+                    <EditText
+                        android:id="@+id/et_password"
+                        style="@style/FormEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/login_edit_text_height"
+                        android:background="@drawable/curve_bg_feta_green"
+                        android:hint=""
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/black"
+                        tools:ignore="LabelFor" />
+
+                    <TextView
+                        style="@style/FormEditTextHeading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginBottom="2dp"
+                        android:text="@string/code" />
+
+                    <EditText
+                        android:id="@+id/et_shop_code"
+                        style="@style/FormEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/login_edit_text_height"
+                        android:background="@drawable/curve_bg_feta_green"
+                        android:hint=""
+                        android:imeOptions="actionDone"
+                        android:inputType="number"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
-                android:orientation="vertical">
+                android:background="@drawable/button_background"
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:paddingHorizontal="32dp"
+                android:text="@string/login"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    style="@style/FormEditTextHeading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="2dp"
-                    android:text="@string/username" />
+        </LinearLayout>
 
-                <EditText
-                    android:id="@+id/et_username"
-                    style="@style/FormEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/login_edit_text_height"
-                    android:background="@drawable/curve_bg_feta_green"
-                    android:hint=""
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:paddingHorizontal="10dp"
-                    android:textColor="@color/black" />
-
-                <TextView
-                    style="@style/FormEditTextHeading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="2dp"
-                    android:text="@string/password" />
-
-                <EditText
-                    android:id="@+id/et_password"
-                    style="@style/FormEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/login_edit_text_height"
-                    android:background="@drawable/curve_bg_feta_green"
-                    android:hint=""
-                    android:imeOptions="actionNext"
-                    android:inputType="textPassword"
-                    android:paddingHorizontal="10dp"
-                    android:textColor="@color/black"
-                    tools:ignore="LabelFor" />
-
-                <TextView
-                    style="@style/FormEditTextHeading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="2dp"
-                    android:text="@string/code" />
-
-                <EditText
-                    android:id="@+id/et_shop_code"
-                    style="@style/FormEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/login_edit_text_height"
-                    android:background="@drawable/curve_bg_feta_green"
-                    android:hint=""
-                    android:imeOptions="actionDone"
-                    android:inputType="number"
-                    android:paddingHorizontal="10dp"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-        <Button
-            android:id="@+id/btn_login"
+        <ProgressBar
+            android:id="@+id/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="16dp"
-            android:background="@drawable/button_background"
-            android:fontFamily="@font/montserrat_semi_bold"
-            android:paddingHorizontal="32dp"
-            android:text="@string/login"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
