--- a/app/src/main/res/layout/fragment_godown_add_stock.xml
+++ b/app/src/main/res/layout/fragment_godown_add_stock.xml
@@ -12,192 +12,202 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ui.addstock.godownstock.GodownAddStockFragment">
 
-    <LinearLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/ll_check_stock"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/curve_bg_white"
-            android:clickable="true"
-            android:elevation="6dp"
-            android:focusable="true"
-            android:foreground="?selectableItemBackground"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/tv_godown_name_heading"
+            <LinearLayout
+                android:id="@+id/ll_check_stock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/curve_bg_white"
+                android:clickable="true"
+                android:elevation="6dp"
+                android:focusable="true"
+                android:foreground="?selectableItemBackground"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_godown_name_heading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginVertical="4dp"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    tools:text="Godown 1" />
+
+                <TextView
+                    android:id="@+id/tv_check_stock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="4dp"
+                    android:fontFamily="@font/montserrat_thin"
+                    android:text="@string/tap_to_check_stock"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginVertical="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/curve_bg_white"
+                android:padding="14dp"
+                app:cardCornerRadius="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="16dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/AddStockFormEditTextHeading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="2dp"
+                        android:text="@string/product_code" />
+
+                    <EditText
+                        android:id="@+id/et_product_code"
+                        style="@style/FormEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/small_edit_text_height"
+                        android:background="@drawable/curve_bg_feta_green"
+                        android:hint=""
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        style="@style/AddStockFormEditTextHeading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginBottom="2dp"
+                        android:text="@string/product_name" />
+
+                    <EditText
+                        android:id="@+id/et_product_name"
+                        style="@style/FormEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/small_edit_text_height"
+                        android:background="@drawable/curve_bg_feta_green"
+                        android:hint=""
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/black"
+                        tools:ignore="LabelFor" />
+
+                    <TextView
+                        style="@style/AddStockFormEditTextHeading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginBottom="2dp"
+                        android:text="@string/product_range" />
+
+                    <EditText
+                        android:id="@+id/et_product_range"
+                        style="@style/FormEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/small_edit_text_height"
+                        android:background="@drawable/curve_bg_feta_green"
+                        android:hint=""
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/black"
+                        tools:ignore="LabelFor" />
+
+                    <TextView
+                        style="@style/AddStockFormEditTextHeading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginBottom="2dp"
+                        android:text="@string/product_brand" />
+
+                    <EditText
+                        android:id="@+id/et_product_brand"
+                        style="@style/FormEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/small_edit_text_height"
+                        android:background="@drawable/curve_bg_feta_green"
+                        android:hint=""
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/black"
+                        tools:ignore="LabelFor" />
+
+                    <TextView
+                        style="@style/AddStockFormEditTextHeading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginBottom="2dp"
+                        android:text="@string/quantity" />
+
+                    <EditText
+                        android:id="@+id/et_quantity"
+                        style="@style/FormEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/small_edit_text_height"
+                        android:background="@drawable/curve_bg_feta_green"
+                        android:hint=""
+                        android:imeOptions="actionDone"
+                        android:inputType="number"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+
+            <Button
+                android:id="@+id/btn_add_stock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginVertical="4dp"
-                android:fontFamily="@font/montserrat_bold"
+                android:layout_margin="16dp"
+                android:background="@drawable/button_background"
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:paddingHorizontal="32dp"
+                android:text="@string/title_add_stock"
+                android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                tools:text="Godown 1" />
-
-            <TextView
-                android:id="@+id/tv_check_stock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="4dp"
-                android:fontFamily="@font/montserrat_thin"
-                android:text="@string/tap_to_check_stock"
-                android:textColor="@color/black"
-                android:textSize="12sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/card_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/curve_bg_white"
-            android:padding="14dp"
-            app:cardCornerRadius="10dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="16dp"
-                android:orientation="vertical">
-
-                <TextView
-                    style="@style/AddStockFormEditTextHeading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="2dp"
-                    android:text="@string/product_code" />
-
-                <EditText
-                    android:id="@+id/et_product_code"
-                    style="@style/FormEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/small_edit_text_height"
-                    android:background="@drawable/curve_bg_feta_green"
-                    android:hint=""
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:paddingHorizontal="10dp"
-                    android:textColor="@color/black" />
-
-                <TextView
-                    style="@style/AddStockFormEditTextHeading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="2dp"
-                    android:text="@string/product_name" />
-
-                <EditText
-                    android:id="@+id/et_product_name"
-                    style="@style/FormEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/small_edit_text_height"
-                    android:background="@drawable/curve_bg_feta_green"
-                    android:hint=""
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:paddingHorizontal="10dp"
-                    android:textColor="@color/black"
-                    tools:ignore="LabelFor" />
-
-                <TextView
-                    style="@style/AddStockFormEditTextHeading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="2dp"
-                    android:text="@string/product_range" />
-
-                <EditText
-                    android:id="@+id/et_product_range"
-                    style="@style/FormEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/small_edit_text_height"
-                    android:background="@drawable/curve_bg_feta_green"
-                    android:hint=""
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:paddingHorizontal="10dp"
-                    android:textColor="@color/black"
-                    tools:ignore="LabelFor" />
-
-                <TextView
-                    style="@style/AddStockFormEditTextHeading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="2dp"
-                    android:text="@string/product_brand" />
-
-                <EditText
-                    android:id="@+id/et_product_brand"
-                    style="@style/FormEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/small_edit_text_height"
-                    android:background="@drawable/curve_bg_feta_green"
-                    android:hint=""
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:paddingHorizontal="10dp"
-                    android:textColor="@color/black"
-                    tools:ignore="LabelFor" />
-
-                <TextView
-                    style="@style/AddStockFormEditTextHeading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="2dp"
-                    android:text="@string/quantity" />
-
-                <EditText
-                    android:id="@+id/et_quantity"
-                    style="@style/FormEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/small_edit_text_height"
-                    android:background="@drawable/curve_bg_feta_green"
-                    android:hint=""
-                    android:imeOptions="actionDone"
-                    android:inputType="number"
-                    android:paddingHorizontal="10dp"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-        <Button
-            android:id="@+id/btn_add_stock"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="16dp"
-            android:background="@drawable/button_background"
-            android:fontFamily="@font/montserrat_semi_bold"
-            android:paddingHorizontal="32dp"
-            android:text="@string/title_add_stock"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <ProgressBar
-        android:id="@+id/loading"
+        android:id="@+id/loading_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
