--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fragment_heading_height">26sp</dimen>
     <dimen name="login_edit_text_height">44dp</dimen>
     <dimen name="edit_text_height">43dp</dimen>
     <dimen name="edit_text_height_big">66dp</dimen>
     <dimen name="small_edit_text_height">36dp</dimen>
     <dimen name="dialog_min_width_major">50%</dimen>
-    <dimen name="customer_name_edit_text_height">38dp</dimen>
+    <dimen name="medium_edit_text_height">38dp</dimen>
 </resources>
