--- a/app/src/main/res/layout/fragment_invoice.xml
+++ b/app/src/main/res/layout/fragment_invoice.xml
@@ -15,14 +15,14 @@
         android:fontFamily="@font/montserrat_semi_bold"
         android:text="@string/title_invoice"
         android:textColor="@color/black"
-        android:textSize="28sp"
+        android:textSize="@dimen/fragment_heading_height"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_customer_name"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/customer_name_edit_text_height"
+        android:layout_height="@dimen/medium_edit_text_height"
         android:layout_margin="16dp"
         android:background="@drawable/curve_bg_white"
         android:fontFamily="@font/montserrat"
@@ -34,109 +34,125 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/tv_invoice_heading" />
 
-    <FrameLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/spinner_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="12dp"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@id/products_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_customer_name">
+
+        <Spinner
+            android:id="@+id/spinner_godowns"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/medium_edit_text_height" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/products_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_customer_name">
+        app:layout_constraintTop_toBottomOf="@+id/spinner_card_view">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/curve_bg_white"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:fontFamily="@font/montserrat_medium"
-                android:text="@string/products"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_marginBottom="24dp"
+                android:background="@drawable/curve_bg_white"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/montserrat_light"
-                    android:gravity="center"
-                    android:text="@string/name"
-                    android:textColor="@color/justBlack"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:layout_margin="16dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="@string/products"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/montserrat_light"
-                    android:gravity="center"
-                    android:text="@string/brand"
-                    android:textColor="@color/justBlack"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/montserrat_light"
-                    android:gravity="center"
-                    android:text="@string/range"
-                    android:textColor="@color/justBlack"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:fontFamily="@font/montserrat_light"
+                        android:gravity="center"
+                        android:text="@string/search_query"
+                        android:textColor="@color/justBlack"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/montserrat_light"
+                        android:gravity="center"
+                        android:text="@string/qty"
+                        android:textColor="@color/justBlack"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_invoice_product_items"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="48dp"
                     android:layout_weight="1"
-                    android:fontFamily="@font/montserrat_light"
-                    android:gravity="center"
-                    android:text="@string/qty"
-                    android:textColor="@color/justBlack"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    tools:itemCount="10"
+                    tools:listitem="@layout/list_item_invoice_product" />
 
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_invoice_product_items"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="48dp"
-                android:layout_weight="1"
-                tools:itemCount="10"
-                tools:listitem="@layout/list_item_invoice_product" />
+            <Button
+                android:id="@+id/btn_invoice_done"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/button_background"
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:paddingHorizontal="64dp"
+                android:text="@string/done"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+        </FrameLayout>
 
-        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-        <Button
-            android:id="@+id/btn_invoice_done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/button_background"
-            android:fontFamily="@font/montserrat_semi_bold"
-            android:paddingHorizontal="64dp"
-            android:text="@string/done"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-    </FrameLayout>
+    <ProgressBar
+        android:id="@+id/loading_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
