caching data layer setup
Signed-off-by: parthtakkar <parthtakkar@gmail.com>

--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -31,15 +31,22 @@
         tools:itemCount="3"
         tools:listitem="@layout/list_item_godown_chip" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_godown_orders"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16dp"
+        android:isScrollContainer="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_godown_chips"
-        tools:listitem="@layout/list_item_godown_order" />
+        app:layout_constraintTop_toBottomOf="@+id/rv_godown_chips">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_godown_orders"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/list_item_godown_order" />
+
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
