--- a/app/src/main/res/layout/list_item_godown_order_product.xml
+++ b/app/src/main/res/layout/list_item_godown_order_product.xml
@@ -60,7 +60,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="2dp"
+                android:ellipsize="end"
                 android:fontFamily="@font/montserrat_medium"
+                android:lines="1"
+                android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 tools:text="Product Code" />
